<resources>
    <string name="app_name">test_application</string>

    <!--Main Activity-->
    <string name="button_to_image_loaders">To Image Loaders</string>
    <string name="button_to_player">To Exoplayer</string>
    <string name="button_to_lottie">To Lottie</string>
    <string name="button_to_result_api">To Result Api</string>

    <!--Images Activity-->
    <string name="glide_image">Glide image</string>
    <string name="picasso_image">Picasso image</string>
    <string name="coil_image">Coil image</string>
    <string name="button_load_picture">Load pictures</string>
    <string name="button_load_gifs">Load gifs</string>
    <string name="glide_gif">Glide gif</string>
    <string name="coil_gif">Coil gif</string>

    <!--ExoPlayer Activity-->
    <string name="button_start_play_audio">Start play audio</string>
    <string name="button_start_play_video">Start play video</string>
    <string name="button_stop_play">Stop play</string>

    <!--Lottie Activity-->
    <string name="auto_play">Auto play animation</string>
    <string name="non_auto_play">Non auto-play animation</string>
    <string name="from_network">Animation, loaded from network</string>
    <string name="button_start_animation">Start Animation</string>

    <!--ResultApi Activity-->
    <string name="from_camera">From Camera</string>
    <string name="from_camera_preview">From Camera (Preview)</string>
    <string name="from_gallery">From Gallery</string>
    <string name="custom_contract">Custom Contract</string>
</resources>